Bug 136915 - The Characters printed only normal, no Bold, no Italic in LXQt from Lubuntu with 7.1+
Summary: The Characters printed only normal, no Bold, no Italic in LXQt from Lubuntu w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Qt5
  Show dependency treegraph
 
Reported: 2020-09-21 09:57 UTC by Zsolt
Modified: 2020-10-27 15:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
video (1.73 MB, video/mp4)
2020-09-21 13:02 UTC, BogdanB
Details
I can't print bold and italic (3.55 MB, video/mp4)
2020-09-27 10:31 UTC, Zsolt
Details
LO + Cairo shows only the upper left corner (313.20 KB, image/png)
2020-10-25 11:03 UTC, Zsolt
Details
the dumpfile from crash (581.08 KB, application/vnd.tcpdump.pcap)
2020-10-25 11:15 UTC, Zsolt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zsolt 2020-09-21 09:57:52 UTC
I use Linux Lubuntu 20.04 and LO 7.1.0.0.alpha + Master.
I had the Bug 125234. The 7.1.0.0 solves the problem, but 7.1.0.0 does not want to print bold or italic characters. If I use Liberation Sans in Bold, then I get by ÖÄÜ and ß wrong character. If I don't use Bold, only Liberation Sans, then write 7.1.0.0 correctly ÜÖÄ and ß

to reproduce:
- open a spreadsheet.
- select the Font Liberations Sans
- Type something 4 times in 4 cells with Ö Ü Ä and ß
- One Cell should be Normal, one Bold, one Bold + Italic, one only Italic
- the print preview is OK
- export to PDF -> there is nothing in Bold or Italic, ÜÖÄ and ß are kaputt
- print it -> printout is the same like PDF. (wrong)

I tried to print with other TrueType Fonts. (Arial and Arial Black from MS Package) Those Fonts prints also without Bold, but those fonts prints my ÖÜÄ and ß correctly also if the Bold switched on.
Comment 1 BogdanB 2020-09-21 13:01:13 UTC
I tested your steps in
Version: 7.1.0.0.alpha0+
Build ID: d57b14e3394b081adf0888ed8dcb7b86d66c246c
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Everything ok.

See the video. Or just Save as on attachement and download the video.
Comment 2 BogdanB 2020-09-21 13:02:36 UTC
Created attachment 165735 [details]
video

Also I am using Ubuntu 20.04.

Try a Factory Reset: Help - LibreOffice - Restart In Safe Mode - and check taht 2 options from Factory Settings.

Hope this helps you.
Comment 3 Zsolt 2020-09-27 10:31:53 UTC
Created attachment 165883 [details]
I can't print bold and italic

I tried to do it in safe mode. It does not works for me.
I thing, now we have to find out, what is the difference between your system and my system.

- Your Ubuntu has gnome -- My Lubuntu has LXDE.
- Your LO works in english -- my use the default system language (hungarian)
(I don't know what is your system language for linux)

I tried to switch the LO back to english. It did not help.
I will try to reinstall the LO 7.1 without any language extensions.
Comment 4 Zsolt 2020-09-27 11:59:57 UTC
Hi,

I installed the LO daily version from there:
https://dev-builds.libreoffice.org/daily/master/current.html
it was the daily build from 2020-09-27 03:46:29

It does not work for me.
I have no idea what is it.

I am using LXQt from Lubuntu.
I had problem with GIMP also. GIMP worked also only in english UI.
I installed the gnome language pack for hungarian and german.
After the install works GIMP now in hungarian, and it can german also.

I don't know if it is help to you.
Comment 5 Jan-Marek Glogowski 2020-10-22 08:05:18 UTC
Also happens with PDF export.
Comment 6 Michael Weghorn 2020-10-22 13:43:44 UTC
Zsolt: FYI: https://bugs.launchpad.net/ubuntu/+source/lubuntu-meta/+bug/1895216

To avoid hitting the issue, setting the environment variable SAL_VCL_QT5_USE_CAIRO=1 should probably make the issue go away for now.

(Testing plain qt5 is appreciated of course, but if you hit issues, setting the env variable should help.)
Comment 7 Commit Notification 2020-10-22 13:53:55 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/90dd969e7db5aaa76117547d7892f3a9dc1db46f

tdf#136915 correctly create QFont from Qt5FontFace

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Jan-Marek Glogowski 2020-10-22 13:56:02 UTC
This works for PDF, so should work for printing too..
Comment 9 Zsolt 2020-10-25 11:01:08 UTC
(In reply to Jan-Marek Glogowski from comment #8)
> This works for PDF, so should work for printing too..

Hi,

I tried the version of 2020-10-24_14:53:01 built version.

- The convert to PDF -> print from PDF works fine.

- If I try to print directly, does not work. The LO crashes. It throws an Exception, but i does not know, how can I get the Exception and send it to you.

- I tried with SAL_VCL_QT5_USE_CAIRO=1. The LO can print directly.
If the SAL_VCL_QT5_USE_CAIRO=1, then I have to resize the window always. The LO shows only per default the upper left corner. I upload a screenshot to you.
Comment 10 Zsolt 2020-10-25 11:03:23 UTC
Created attachment 166691 [details]
LO + Cairo shows only the upper left corner
Comment 11 Zsolt 2020-10-25 11:15:26 UTC
Created attachment 166692 [details]
the dumpfile from crash
Comment 12 Timur 2020-10-26 08:10:34 UTC
(In reply to Zsolt from comment #9)
> i does not know, how can I get the Exception and send it 
You get dbg build, then you run it with: $ soffice --backtrace
https://wiki.documentfoundation.org/QA/BugReport/Debug_Information
Comment 13 Jan-Marek Glogowski 2020-10-27 15:54:49 UTC
(In reply to Zsolt from comment #9)
...
> - If I try to print directly, does not work. The LO crashes. It throws an
> Exception, but i does not know, how can I get the Exception and send it to
> you.
...

I opened bug 137804 for this.