tdf#136915 correctly create QFont from Qt5FontFace

Store the origin of the Qt5FontFace and therefore the type of the
font ID and use either QFont::fromString or QFontDatabase::font to
generate the correct QFont instance.

Interestingly the QFont::fromString worked with the minimal font
string, ignoring the font style, but now fails with error messages
when including the point size. Guess Qt supports partial font
strings, as long as they match the segment types from the start.

Change-Id: I6b30423a5ae9abd8ee50d6087a3ec61d85f6320f